tests/models/u16/fail/expected.rs
use dade::model;
#[model]
struct TestModel {
    #[field(expected = "value")]
    value: u16,
}
fn main() {}
